--- a/extension/package.json
+++ b/extension/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.49.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.1"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0-beta.28",
