--- a/extension/package.json
+++ b/extension/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.49.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "simple-icons": "^16.8.0"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0-beta.28",
